@@ -59,7 +59,7 @@ limitations under the License.
 
               <div class="buttons clearfix">
 
-                <button type="submit">Analyse Values</button>
+                <button type="submit"><span>Analyse Values</span></button>
 
                 <div class="verbose_output active">
                   <a>Verbose Output</a>
